# APPFL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README  README-build  README-heapobj.txt  README.md  TODO.txt  TOTHINK.txt  ch1.hs  ch2.hs  ch3.hs  ch4.hs  ch5.hs  ch6.hs  ch7.hs  options.h  parser.hs  parser4.hs  shuffle.hs  stgparser.hs
codegen/: .gitignore  .project  ADT.hs  ADT.hs-boot  ADTnew.hs  AST.hs  ASTz.hs  Analysis.hs  BU.hs  Boilerplate.hs  CAST.hs  CMap.hs  CheckCon.hs  CodeGen.hs  ConMap.hs  ConMap2.hs  ConMaps.hs  ConMaps2IT.hs  ConvertSTG.hs  DAnalysis.hs  Driver.hs  Driver2.hs  DupCheck.hs  FromGHC.hs  GenStgApply.hs  GenStgApplyStrict.hs  HM.hs  HMBU.hs  HMStg.hs  HeapObj.hs  InfoTab.hs  Lexer.hs  NewAST.hs  NewDriver.hs  NewParser.hs  NewTokenizer.hs  Options.hs  OrderFVsArgs.hs  PPrint.hs  ParseComb.hs  (+55 more)
codegen/Analysis/: DSL.hs  FV.hs  KHL91.hs  Language.hs  Syn-Sem.md  Type.hs  types.txt
codegen/FromGHC/: BuiltIn.hs  FromGHC.hs  Naming.hs  PrettySTG.hs  PruneSTG.hs  notes.txt
codegen/MHS/: AST.hs  Driver.hs  Parser.hs  ToSTG.hs  Tokenizer.hs  Transform.hs
codegen/OLD/: ADT.hs  ConMaps.hs  Lexer.hs  ParseComb.hs  Scanner.hs
codegen/analysis/: Gen.ps  Gen.txt  Language.hs  WH87.hs
codegen/tests/: Prelude.stg  README  RenameTest.hs  TestUtils.hs  append.hs  append.stg  countdown.stg  examples.stg  fac_unboxed.stg  factorial.txt  main.stg  repminlist.hs  repminlist.stg  repmintree.stg  test.hs
codegen/tests/ADT/: Test.hs  adt.gold  adt.stg
codegen/tests/CodeGen/: Test.hs  one.gold
codegen/tests/ConMap/: Test.hs  mapone.gold
codegen/tests/InfoTab/: Test.hs  seq.gold  tabseq.gold
codegen/tests/Lexer/: Test.hs  adt.gold  unboxed.gold  unboxed.stg
codegen/tests/Parser/: Test.hs  con2.gold  con2.stg
codegen/tests/Rename/: Test.hs  seq.gold
codegen/tests/Scanner/: Test.hs  add.gold  add.stg  adt.gold  adt.stg  comments.gold  comments.stg  unboxed.gold  unboxed.stg
codegen/tests/SetFVs/: Test.hs  seqDefs.gold  seqFV.gold
codegen/tests/Tokenizer/: Test.hs  adt.gold  unboxed.gold  unboxed.stg
runtime/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Makefile2  README-heapobj-today.txt  README-heapobj.txt  args.c  args.h  cas.c  cas.h  cmm.c  cmm.h  cruntime.h  forwardtypedef.c  gc.c  gc.h  heap.c  heap.h  interp.c  lfq.c  lfq.h  lockfree_queue.h  lockfree_queue_c.cpp  lockfree_queue_c.h  log.h  main.c  mymain.c  nodepool.c  nodepool.h  nodequeue.c  nodequeue.h  obj.h  one.c  outline.txt  predefs.c  predefs.h  sanity.c  sanity.h  (+30 more)
runtime/ex9/: Makefile  experiment9.c
runtime/experiments/: experiment-cont.c  experiment-label.c  experiment4.c  experiment5.c  experiment6.c  experiment7.c  tailcall0.c  tailcall3.c  tailcall_separate.c  tailcall_separate.h  varheap.c
runtime/experiments/mmapstacks/: testmmap.c
runtime/lockfree/: lockfree_queue.h  lockfree_queue_c.h
sandbox/c-dsl/c-dsl-0.3.1/: LICENSE  c-dsl.cabal
stgApply/: .gitignore  GenStgApply.hs  nonstrict.c  stgApply.cabal  stgApply.h  strict.c
test/: CMakeLists.txt  CMakeLists.txt.new  Makefile  add.stg  and.stg  append.stg  append2.stg  append3.stg  apply.stg  arrayCreation.stg  binaryST1.stg  binaryST10.stg  binaryST11.stg  binaryST13.stg  binaryST16.stg  binaryST17.stg  binaryST3.stg  binaryST5.stg  binaryST6.stg  binaryST7.stg  binaryST9.stg  compareInt.stg  cons.stg  divide.stg  elem.stg  eqBool.stg  eqList.stg  eqintfalse.stg  evenArrayCreation1.stg  fac.stg  fibs.stg  fibs2.stg  firstHalf.stg  gc1.stg  graph1.stg  graph2.stg  graph5.stg  graph7.stg  graph9.stg  hanoi.stg  (+78 more)
test/error/: CMakeLists.txt  adt1.stg  adt2.stg  con1.stg  con2.stg  dataCon2.stg  dataCons3.stg  dataDouble1.stg  dataType1.stg  dataType2.stg  dataType3.stg  freevar.stg  fun3.stg  funName1.stg  obj.stg  pap2.stg  polyUnboxed.stg
test/haskell/: Euler.hs  Euler.stg  Even.hs  Even.stg  Fact.hs  Fact.stg  Fibo.hs  Mod1.hs  Mod2.hs  Prelude.hs  Prim.hs  Test.appflsyn  Test.ghcsyn  Test.hs  Test.stg  Test.stgsyn  TestMatch.hs  TestMatch.stgsyn
test/haskell/APPFL/: Arr.hs  Base.hs  CString.hs  Char.hs  Classes.hs  Err.hs  Integer.hs  Num.hs  Prim.hs  PrimopWrappers.hs  Real.hs  Show.hs  Tuple.hs  Types.hs  Unicode.hs
test/haskell/Control/: Applicative.hs  Category.hs  Monad.hs
test/haskell/Data/: Bits.hs  Bool.hs  Char.hs  Either.hs  Foldable.hs  Functor.hs  List.hs  Maybe.hs  Monoid.hs  OldList.hs  Ord.hs  Proxy.hs  Traversable.hs  Tuple.hs  Typeable.hs
test/haskell/Unsafe/: Coerce.hs
test/haskell/include/: HsBaseConfig.h
test/haskell/project-euler/: Even.hs  Even.stg
test/hs/: CMakeLists.txt  add.hs  add2.hs  boolAnd.hs  boolList.hs  boolOr.hs  boolTrue.hs  fac.hs  facif.hs.disabled  fib.hs  fib.hs.disabled  fibif.hs  list1.hs  list2.hs  lt.hs  qsort.hs  rep.hs.disabled  tuple.hs  zero.hs  zip.hs  zip.hs.disabled
test/hs/error/: CMakeLists.txt  emptyhead.hs  undefined.hs
test/jenkins-ctest-plugin/: LICENSE  README.md  run-test-and-save.sh
test/lockfree/: test.cpp
test/mhs/: CMakeLists.txt  CMakeLists.txt.new  add.mhs  append.mhs  append2.mhs  append3.mhs  apply.mhs  bool.mhs  cons.mhs  docs.mhs  eqintfalse.mhs  eqinttrue.mhs  fac.mhs  fancy.mhs  fancy.mhs.disabled  fibs.mhs  gc1.mhs  let.mhs  letrec.mhs  letrec2.mhs  list.mhs  map_pap.mhs  map_pap2.mhs  max.mhs  min.mhs  minint.mhs  mult.mhs  one.mhs  pap.mhs  seq.mhs  take.mhs  tree.mhs  zipWith.mhs
test/stg/: CMakeLists.txt  add.stg  and.stg  append.stg  append2.stg  append3.stg  apply.stg  arrayCreation.stg  binaryST1.stg  binaryST10.stg  binaryST11.stg  binaryST12.stg  binaryST13.stg  binaryST14.stg  binaryST15.stg  binaryST16.stg  binaryST17.stg  binaryST2.stg  binaryST3.stg  binaryST4.stg  binaryST5.stg  binaryST6.stg  binaryST7.stg  binaryST8.stg  binaryST9.stg  blank.stg  blank2.stg  bool.stg  comments.txt  compareInt.stg  cons.stg  divide.stg  docs.stg  double.stg  e0ye1ye2n.stg  elem.stg  eqBool.stg  eqList.stg  eqTriple.stg  eqintfalse.stg  (+141 more)
test/stg/error/: CMakeLists.txt  comment.stg  con1.stg  con2.stg  dataCon1.stg  dataCon2.stg  dataCons3.stg  dataDouble.stg  dataDouble1.stg  fun1.stg  (+13 more)
(+442 files in other folders)
