name:           stgc
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         LANL
                
executable stgc
  hs-source-dirs:  .,MHS
  main-is:         stgc.hs
  ghc-options:      -j -W -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-imports
  build-depends:   
                     base >= 4
                   , containers
                   , mtl
                   , pretty >= 1.1.1.1
                   , process
                   , split
                   , ghc-prim
--                   , language-c

test-suite test
  type:            exitcode-stdio-1.0
  hs-source-dirs:  .,MHS,tests
  main-is:         test.hs
  ghc-options:      -j -W -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-imports -rtsopts
  build-depends:   HUnit
                 , QuickCheck
                 , base >= 4
                 , bytestring
                 , pretty >= 1.1.1.1
                 , tasty > 0.10
                 , tasty-ant-xml
                 , tasty-golden
                 , tasty-hunit
                 , tasty-quickcheck
 


